Fixed Prizes Carousel Again
Image size was messed up

--- a/css/custom.css
+++ b/css/custom.css
@@ -472,6 +472,7 @@ input[type="radio"] {
 }
 
 .bs-example1 {
+  text-align: center;
 	margin: 20px;
   margin-left: auto;
   margin-right: auto;
